# lumeview

./: CMakeLists.txt  LICENSE  Readme.md  gltests-0.cpp
camera/: arc_ball.cpp
glad/glad-2.1/src/: glad.c
glad/glad-3.0/include/glad/: glad.h
glad/glad-3.2/src/: glad.c
java_binding_sample/: .gitignore  build.gradle  settings.gradle
java_binding_sample/src/main/java/eu/mihosoft/nativeogl/vrl/system/: Base64.java  IOUtil.java  ParameterValidator.java  VClassLoaderUtil.java  VObjectInputStream.java  VParamUtil.java  VSysUtil.java  ValidationResult.java
java_binding_sample/src/main/java/eu/mihosoft/vnativegl/: Main.java  NativeOpenGL.java  NativeOpenGLPanel.java
java_binding_sample/src/main/java/eu/mihosoft/vnativegl/vrl/system/: Base64.java  IOUtil.java  ParameterValidator.java  VClassLoaderUtil.java  VObjectInputStream.java  VParamUtil.java  VSysUtil.java  ValidationResult.java
java_binding_sample/src/main/java/eu/mihosoft/vrl/v3d/nativeogl/: Main.java  NativeOpenGL.java  NativeOpenGLPanel.java
meshes/: plane_with_center.stl  pyra.stl  sphere.stl  tet.ele  tet.face  tet.node  tet.ugx
shaders/: flat-edge-shading.gs  flat-shading.fs  flat-shading.gs  flat-tri-shading.gs  fragment-shader-0.fs  fragment-shader-0.glsl  light-intensity.fs  no-shading.vs  smooth-shading.fs  smooth-shading.vs  vertex-shader-0.glsl  vertex-shader-0.vs  wireframe.fs
src/: CMakeLists.txt  arc_ball.cpp  arc_ball.h  arc_ball_view.cpp  arc_ball_view.h  array_annex.h  camera.cpp  camera.h  cond_throw.h  config.cpp  config.h  data_buffer.h  file_util.cpp  file_util.h  fwds.h  geometry.cpp  geometry.h  gl_buffer.h  glfw_main.cpp  grob.cpp  grob.h  grob_hash.h  ideas.h  imgui_log.h  input_listener.cpp  input_listener.h  iostream_util.h  log.h  lumeview.cpp  lumeview.h  lumeview_error.h  main.cpp  mesh.cpp  mesh.h  mesh_annex.h  mesh_data.h  message.h  message_queue.cpp  message_queue.h  message_receiver.cpp  (+33 more)
src/camera/: arc_ball.cpp  arc_ball.h
src/imgui/: imgui_binding.cpp  imgui_binding.h
src/jni/: jni_event_listener.cpp  jni_event_listener.h
src/mesh/: geometry.cpp  geometry.h  grob.cpp  grob.h  mesh.cpp  mesh.h  topology.cpp  topology.h  vec_math_raw.h
src/profit/: profit.h
src/slimesh/: CMakeLists.txt  annex.h  annex_storage.h  array_annex.h  cond_throw.h  custom_exception.h  file_io.cpp  grob.h  grob_array.h  grob_index.h  mesh.cpp  mesh.h  normals.cpp  subset_info_annex.h  topology.cpp  topology.h  topology_impl.h
